--- a/css/contacto.css
+++ b/css/contacto.css
@@ -7,8 +7,9 @@ body {
     padding: 0;
     margin: 0;
 }
-
-    /* HEADER     */
+/* ---------------------------------------------------------------------------
+    HEADER    
+--------------------------------------------------------------------------- */
 }
 
 .header{
@@ -54,9 +55,15 @@ header nav ul li{
 .links li a:hover::after{
     width: 100%;
 }
-
-/* FORMULARIO */
+/* ---------------------------------------------------------------------------
+FORMULARIO
+--------------------------------------------------------------------------- */
+.contenedor{
+    display: flex;
+    justify-content: center;
+}
 .formulario {
+    width: 30%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -64,7 +71,7 @@ header nav ul li{
     padding-top: 20px;
     background-color: black;
     color: white;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 1);
 }
 .titulo{
     margin-bottom: 10px;
@@ -75,8 +82,10 @@ label{
 }
 
 input{
-    padding: 10px;
+    width: 35%;
+    height: 30px;
     border-radius: 10px;
+    padding-left: 5px;
 }
 
 input, .consulta{
@@ -84,7 +93,7 @@ input, .consulta{
 }
 .consulta{
     resize: none;
-    width: 300px;
+    width: 50%;
     height: 100px;
     padding: 2px 5px;
     border-radius: 5px;
@@ -93,7 +102,8 @@ input, .consulta{
 }
 
 .btn{
-    width: 100px;
+    width: 20%;
+    height: 40px;
     margin: 10px 0;
     border-radius: 25px;
     background-color: #DA5E58;
@@ -103,9 +113,10 @@ input, .consulta{
 .btn:hover{
     background-color: red;
 }
-
-/* SECTION */
-.contenedor{
+/* ---------------------------------------------------------------------------
+SECTION
+--------------------------------------------------------------------------- */
+.section{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -114,7 +125,7 @@ input, .consulta{
     border-radius: 10px;
     background-color: black;
 }
-.contenedor p{
+.section p{
     color: white;
     font-weight: 700;
     font-size: 40px;
@@ -132,8 +143,9 @@ input, .consulta{
 .insta{
     color: white;
 }
-
-/* FOOTER */
+/* ---------------------------------------------------------------------------
+FOOTER
+--------------------------------------------------------------------------- */
 .footer {
     width: 100%;
     height: 200px;
